0.6.1 (trunk):
* Expose a `decl` option to make the `Xml.to_string` declaration prefix optional.
* Do not output a `<?xml` declaration in `Html.to_string`.

0.6.0 (21-June-2013):
* Add URI anti-quotation expander that maps `$uri:u$` to `Uri.to_string u`.
* Xmlm is now an external dependency instead of being bundled with Cow.
* Remove `?templates` from `Html.of_string` and `Xml.of_string`.

0.5.5 (12-June-2013):
* Markdown to HTML now generates header titles inside the anchor (previously, a space was anchored).

0.5.4 (21-May-2013):
* Add `json_of` and `of_json` type-conv providers (#6).
* Add `Json.to_string_hum` which adds more newlines for human-readable output (#7).
* Document the `-cow-no-open` camlp4 flag (#9).
* Be compatible with Core by using `List.concat` instead of `List.flatten` (#2).
* Fix Atom feed by adding a `link` field.
* Install `.mli` files with the library binaries (#11).
* New dependency on the `Uri` library.

0.5.3 (18-Feb-2013):
* Correct META file for `cow.syntax` to not repeat the `Str` module loading.
* Fix error with unary sum types for HTML generation.
* Support JSON marshalling for `option` types.

0.5.2 (15-Jan-2013):
* Remove dependency towards the Str module

0.5.1 (10-Jan-2013):
* Fix bugs in `Markdown_github` and factorize html serialization functions
* New antiquotation kinds for CSS
* Add xhtml quotations (which are identical to html from now on)

0.5.0 (04-Dec-2012):
* Remove the broken `Twitter` module
* Add `Markdown_github` to read Github's markdown files

0.4.0 (05-Oct-2012):
* Support (and require) type_conv-108.07.00+

0.3.2 (11-Sep-2012):
* Add `<:html<` quotation, based on the XML generator,
  but with all the XHTML entities also supplied.

0.3.1 (04-Sep-2012):
* Fix the OCamlfind META file.

0.3.0 (02-Sep-2012):
* Initial public release.